fix truncating text on card description

--- a/src/components/pages/Categories/Category/Category.scss
+++ b/src/components/pages/Categories/Category/Category.scss
@@ -7,5 +7,16 @@
     width: 300px;
     margin: 10px;
     margin-left: 0;
+
+    .ant-card-body {
+      height: 150px;
+    }
+
+    .ant-card-meta-description {
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 4;
+    }
   }
 }
